// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopNewsContainer should match the snapshot 1`] = `
<section>
  <h2
    className="TopNews-header"
  >
    Top News
  </h2>
  <div
    className="TravelContainer-wrapper Card-wrapper"
  >
    <Card
      id={232}
      key="RSKdgCZ8S"
      title="Syria"
    />
    <Card
      id={45}
      key="s6-Fnd69wr"
      titel="Trump loses hair"
    />
  </div>
</section>
`;

exports[`TopNewsContainer should render an error if an error message is passed 1`] = `
<section>
  <h2
    className="TopNews-header"
  >
    Top News
  </h2>
  <div
    className="TravelContainer-wrapper Card-wrapper"
  >
    <div>
      <h2>
        something went wrong
      </h2>
      <Link
        to="/Options"
      >
        Back
      </Link>
    </div>
  </div>
</section>
`;

exports[`TopNewsContainer should render loading if data is in the process of fetching 1`] = `
<section>
  <h2
    className="TopNews-header"
  >
    Top News
  </h2>
  <div
    className="TravelContainer-wrapper Card-wrapper"
  >
    <Loading />
  </div>
</section>
`;
